# full-stack-rust-web-app-example

./: .gitignore  Cargo.toml
api/: Cargo.toml  build.rs
api/src/: lib.rs
entity/: Cargo.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.js  main.ts
frontend/src/components/: PostDialog.vue  Posts.vue
frontend/src/layouts/default/: AppBar.vue  Default.vue  Navigation.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: counter.js  post.js
frontend/src/views/: Dashboard.vue  PostsView.vue
migration/: Cargo.toml
service/: Cargo.toml
service/src/: query.rs
