[package]
name = "actix-example-api"
version = "0.1.0"
authors = ["Bart Weber"]
edition = "2021"
publish = false

[dependencies]
actix-example-service = { path = "../service" }
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
actix-web-static-files = "4"
static-files = "0.2.1"
dotenvy = "0.15"
listenfd = "0.5"
serde = "1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }

[build-dependencies]
static-files = "0.2.1"
